# LogicGates_Editor_Qt

./: .gitignore  CMakeLists.txt  README.md
include/: AbstractNode.hpp  AddNodeCommand.hpp  Connection.hpp  ConnectionPoint.hpp  Editor.hpp  MainWindow.hpp  Node.hpp  NodeInterface.hpp  Sidebar.hpp
include/LogicGates/: AbstractTwoInputNode.hpp  DisplayOutput.hpp  PowerSource.hpp
include/LogicGates/Gates/: AndGate.hpp  BufferGate.hpp  OrGate.hpp  TriStateBufferGate.hpp  XorGate.hpp
source/: AddConnectionCommand.cpp  AddConnectionCommand.hpp  AddNodeCommand.cpp  CMakeLists.txt  Connection.cpp  ConnectionPoint.cpp  Editor.cpp  Editor.hpp  MainWindow.cpp  Node.cpp  Node.hpp  Sidebar.cpp  main.cpp  resources.qrc
source/LogicGates/: AbstractTwoInputNode.cpp  DisplayOutput.cpp  PowerSource.cpp
source/LogicGates/Gates/: AndGate.cpp  BufferGate.cpp  OrGate.cpp  TriStateBufferGate.cpp  XorGate.cpp
